feat: integrate YooKassa payment system and add payment creation endpoint
- Added YooKassa integration in app.ts for payment processing.
- Implemented /create-payment route to handle payment creation with specified amount and description.
- Added webhook route to handle payment notifications and status updates.
- Updated UserRepository to remove unnecessary date initialization in createUser method.
- Added yookassa dependency in pnpm-lock.yaml.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "morgan": "^1.10.1",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "yookassa": "^0.1.1"
   },
   "devDependencies": {
     "@types/compression": "^1.8.1",
