feat: Refactor payment processing and integrate YooKassa API
- Replaced yookassa package with custom implementation in ./lib/yookassa
- Added Payment and Refund classes to handle payment and refund operations
- Introduced PaymentError class for better error handling
- Updated app.ts to utilize new YooKassa implementation
- Added utility function for delay
- Updated package.json and pnpm-lock.yaml to include request and uuid packages
- Enhanced webhook handling to capture payment with amount

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "mongodb": "^6.17.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "yookassa": "^0.1.1"
+    "request": "^2.88.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/compression": "^1.8.1",
@@ -43,6 +44,7 @@
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.0.3",
+    "@types/request": "^2.48.13",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
