--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Backend project for booking photo studios and equipment written in node js express, mongo db",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts"
+    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "request": "^2.88.2",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
     "zod": "^4.1.12"
   },
@@ -47,7 +48,11 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.0.3",
     "@types/request": "^2.48.13",
+    "@types/swagger-ui-express": "^4.1.8",
+    "openapi-types": "^12.1.3",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
   }
 }
