--- a/api.picassostudio.ru.conf
+++ b/api.picassostudio.ru.conf
@@ -1,28 +1,43 @@
 server {
+    listen 80;
     server_name api.picassostudio.ru;
-
-    location / {
-        proxy_pass http://127.0.0.1:5000;   # проксируем на Node.js
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-
-    listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/api.picassostudio.ru/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/api.picassostudio.ru/privkey.pem; # managed by Certbot
-    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+    return 301 https://$host$request_uri;
 }
 
 server {
-    if ($host = api.picassostudio.ru) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-    listen 80;
+    listen 443 ssl http2;
     server_name api.picassostudio.ru;
-    return 404; # managed by Certbot
+
+    ssl_certificate /etc/letsencrypt/live/api.picassostudio.ru/fullchain.pem;  # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/api.picassostudio.ru/privkey.pem;  # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf;  # managed by Certbot (современные шифры)
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;    # managed by Certbot
+
+    # Сжатие ответов
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml+rss;
+    gzip_vary on;
+
+    # Максимальный размер тела запроса (например, для загрузки файлов)
+    client_max_body_size 100M;
+
+    # Статические файлы в /public/
+    location /public/ {
+        alias /var/www/html/api.picassostudio.ru/dist/public/;
+        try_files $uri $uri/ =404;
+        expires 30d;
+        add_header Cache-Control "public";
+    }
+
+    # Проксирование остальных запросов на Node.js
+    location / {
+        proxy_pass http://127.0.0.1:5000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_cache_bypass $http_upgrade;
+    }
 }
