--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongodb": "^6.17.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
