--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/KrastelevAntonDev/Photo-Equipment-Booking#readme",
   "dependencies": {
     "axios": "^1.11.0",
+    "form-data": "^4.0.0",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -48,6 +49,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
+    "@types/form-data": "^2.5.0",
     "@types/node": "^24.0.3",
     "@types/request": "^2.48.13",
     "@types/swagger-ui-express": "^4.1.8",
