feat: обновление конфигурации и добавление схемы для SMS API

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
-PORT=
-MONGODB_URI=
-MONGODB_PORT=
-SHOP_ID=
-SECRET_KEY=
-JWT_SECRET=
+PORT=3000
+MONGODB_URI=mongodb://localhost:27017/photo-equipment-booking
+MONGODB_PORT=27017
+SHOP_ID=your_shop_id_here
+SECRET_KEY=your_yookassa_secret_key_here
+JWT_SECRET=your_jwt_secret_here
+
+# SMS Provider (P1SMS)
+P1SMS_API_KEY=your_p1sms_api_key_here
+P1SMS_BASE_URL=https://admin.p1sms.ru
