--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && tsc-alias",
     "postbuild": "node scripts/copy-public.js",
     "start": "node dist/app.js",
-    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/app.ts"
+    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/app.ts",
+    "seed:images": "ts-node -r tsconfig-paths/register src/seed/add-images.seed.ts"
   },
   "repository": {
     "type": "git",
