feat(atol): implement ATOL integration for receipt management
- Added AtolClient for handling API requests to ATOL.
- Created AtolService for business logic related to receipts.
- Implemented Receipt entity and repository for MongoDB.
- Developed AtolController for managing receipt creation and status retrieval.
- Introduced routes for admin access to receipt functionalities.
- Added DTO for validating receipt creation requests.
- Implemented soft delete functionality for equipment and rooms.
- Enhanced room and equipment services to support admin-specific operations.
- Updated routes to include admin endpoints for equipment and room management.

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,58 @@
-PORT=3000
-MONGODB_URI=mongodb://localhost:27017/photo-equipment-booking
-MONGODB_PORT=27017
-SHOP_ID=your_shop_id_here
-SECRET_KEY=your_yookassa_secret_key_here
-JWT_SECRET=your_jwt_secret_here
+# ===========================================
+# Photo Equipment Booking - Environment Variables
+# ===========================================
 
-# SMS Provider (P1SMS)
-P1SMS_API_KEY=your_p1sms_api_key_here
+# Server Configuration
+NODE_ENV=development
+PORT=3000
+JSON_LIMIT=10mb
+
+# MongoDB Configuration
+MONGODB_URI=mongodb://localhost
+MONGODB_PORT=27017
+MONGODB_NAME=photo_booking
+
+# JWT Authentication
+JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
+
+# YooKassa Payment Gateway
+# Получить можно в личном кабинете ЮКассы: https://yookassa.ru
+SHOP_ID=your_yookassa_shop_id
+SECRET_KEY=your_yookassa_secret_key
+
+# ATOL Online (Fiscal Cash Register)
+# Получить можно в личном кабинете АТОЛ: https://online.atol.ru
+ATOL_LOGIN=your_atol_login
+ATOL_PASSWORD=your_atol_password
+ATOL_GROUP_CODE=your_atol_group_code
+ATOL_INN=1234567890
+ATOL_PAYMENT_ADDRESS=https://your-company-site.ru
+ATOL_COMPANY_EMAIL=info@your-company-site.ru
+ATOL_BASE_URL=https://online.atol.ru
+
+# Для тестирования используйте тестовую среду АТОЛ:
+# ATOL_BASE_URL=https://testonline.atol.ru
+
+# P1SMS (SMS/Viber/VK Notifications)
+# API ключ получить на: https://admin.p1sms.ru
+P1SMS_API_KEY=your_p1sms_api_key
 P1SMS_BASE_URL=https://admin.p1sms.ru
+
+# ===========================================
+# Инструкции по получению ключей:
+# ===========================================
+
+# ЮКасса:
+# 1. Зарегистрируйтесь на https://yookassa.ru
+# 2. Создайте магазин
+# 3. В разделе "Интеграция" получите shopId и secretKey
+
+# АТОЛ:
+# 1. Зарегистрируйтесь на https://online.atol.ru
+# 2. Подключите кассу
+# 3. В разделе API получите логин, пароль и код группы
+# 4. Укажите ИНН организации и адрес расчётов
+
+# P1SMS:
+# 1. Зарегистрируйтесь на https://p1sms.ru
+# 2. В личном кабинете получите API ключ
