feat: implement notification system with booking cancellation worker
- Add BookingCancellationWorker for automatic cancellation of unpaid bookings.
- Create NotificationTemplateService for generating notification messages.
- Develop NotificationService using Bull for managing notification queues.
- Implement NotificationController for handling HTTP requests related to notifications.
- Establish NotificationMongoRepository for MongoDB interactions.
- Define notification entity and repository interfaces.
- Create routes for notification management with admin access.
- Initialize notification module with dependencies and setup.
- Add health check and statistics endpoints for monitoring.

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,24 @@ P1SMS_BASE_URL=https://admin.p1sms.ru
 # P1SMS:
 # 1. Зарегистрируйтесь на https://p1sms.ru
 # 2. В личном кабинете получите API ключ
+
+
+# Redis
+REDIS_PASSWORD=your_strong_redis_password_here
+
+# MongoDB (на хосте)
+MONGODB_NAME=myDB
+
+# YooKassa
+SHOP_ID=your_shop_id
+SECRET_KEY=your_secret_key
+
+# P1SMS
+P1SMS_API_KEY=your_p1sms_api_key
+
+# ATOL (если используете)
+ATOL_LOGIN=
+ATOL_PASSWORD=
+ATOL_GROUP_CODE=
+ATOL_INN=
+ATOL_PAYMENT_ADDRESS=
