--- a/package.json
+++ b/package.json
@@ -23,16 +23,20 @@
   },
   "homepage": "https://github.com/KrastelevAntonDev/Photo-Equipment-Booking#readme",
   "dependencies": {
+    "@types/bull": "^4.10.4",
+    "@types/ioredis": "^5.0.0",
     "axios": "^1.11.0",
-    "form-data": "^4.0.0",
     "bcryptjs": "^3.0.2",
+    "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "form-data": "^4.0.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "morgan": "^1.10.1",
@@ -47,10 +51,10 @@
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/form-data": "^2.5.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
-    "@types/form-data": "^2.5.0",
     "@types/node": "^24.0.3",
     "@types/request": "^2.48.13",
     "@types/swagger-ui-express": "^4.1.8",
