--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,9 @@ services:
       ATOL_PAYMENT_ADDRESS: ${ATOL_PAYMENT_ADDRESS:-}
       ATOL_COMPANY_EMAIL: ${ATOL_COMPANY_EMAIL:-}
       ATOL_BASE_URL: https://online.atol.ru
+      dev_admin_pass: ${dev_admin_pass}
+      full_admin_pass: ${full_admin_pass}
+      admin_pass: ${admin_pass}
 
     volumes:
       # Подключаем директорию uploads с хоста
@@ -88,7 +91,7 @@ services:
       redis:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:5000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
