--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "postbuild": "node scripts/copy-public.js",
     "start": "node dist/app.js",
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/app.ts",
-    "seed:images": "ts-node -r tsconfig-paths/register src/seed/add-images.seed.ts"
+    "seed:admin": "ts-node -r tsconfig-paths/register src/seed/admin.seed.ts",
+    "seed:equipment": "ts-node -r tsconfig-paths/register src/seed/equipment.seed.ts",
+    "seed:equipment-quantity": "ts-node -r tsconfig-paths/register src/seed/update-equipment-quantity.seed.ts",
+    "seed:images": "ts-node -r tsconfig-paths/register src/seed/add-images.seed.ts",
+    "seed:rooms": "ts-node -r tsconfig-paths/register src/seed/room.seed.ts",
+    "seed:rooms-pricing": "ts-node -r tsconfig-paths/register src/seed/rooms.pricing.seed.ts"
   },
   "repository": {
     "type": "git",
