--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "seed:equipment-quantity": "ts-node -r tsconfig-paths/register src/seed/update-equipment-quantity.seed.ts",
     "seed:images": "ts-node -r tsconfig-paths/register src/seed/add-images.seed.ts",
     "seed:rooms": "ts-node -r tsconfig-paths/register src/seed/room.seed.ts",
-    "seed:rooms-pricing": "ts-node -r tsconfig-paths/register src/seed/rooms.pricing.seed.ts"
+    "seed:rooms-pricing": "ts-node -r tsconfig-paths/register src/seed/rooms.pricing.seed.ts",
+    "seed:remove-fri-pricing": "ts-node -r tsconfig-paths/register src/seed/remove-fri-pricing.seed.ts"
   },
   "repository": {
     "type": "git",
