--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,8 +83,8 @@ services:
       admin_pass: ${admin_pass}
 
     volumes:
-      # Подключаем директорию uploads с хоста
-      - ./uploads:/app/dist/public/uploads
+      # Подключаем директорию uploads как именованный volume для сохранения данных
+      - uploads_data:/app/dist/public/uploads
     depends_on:
       mongodb:
         condition: service_healthy
@@ -138,7 +138,9 @@ services:
     volumes:
       - .:/app
       - api_dev_node_modules:/app/node_modules
+      # Для dev используем локальную папку для удобства
       - ./uploads:/app/uploads
+      - ./uploads:/app/dist/public/uploads
     depends_on:
       mongodb:
         condition: service_healthy
@@ -158,7 +160,8 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
-      - ./uploads:/usr/share/nginx/html/uploads:ro
+      # Для nginx используем тот же volume что и API
+      - uploads_data:/usr/share/nginx/html/uploads:ro
     depends_on:
       - api
     networks:
@@ -170,6 +173,8 @@ volumes:
   mongo_data:
     driver: local
   redis_data:
+    driver: local
+  uploads_data:
     driver: local
   api_dev_node_modules:
     driver: local
